Improving on my porfolio website

--- a/Html_references/Gallery.html
+++ b/Html_references/Gallery.html
@@ -51,7 +51,7 @@
             </li>
 
             <li>
-                <a href="">Photos</a>
+                <a href="../Html_references/Gallery.html">Photos</a>
             </li>
 
             <li>
@@ -59,7 +59,7 @@
             </li>
         </ul>
     </div>
-    <h1>Asonglefac Millenium</h1>
+
 
     <div class="img">
         <a target="_blank" href="../images/20191220_183852.jpg">
