--- a/Html_references/contact.html
+++ b/Html_references/contact.html
@@ -2,83 +2,52 @@
 <html>
 
 <head>
-    <title>About me</title>
+    <title>Contact page</title>
     <link rel="stylesheet" href="../css_reference/indexts.css">
 </head>
 
-
 <body>
 
-    <!---
-    <div class="header">
-
-        <div id="elements2">
-            <ul>
-                <li>
-                    <a href="">Book appointment</a>
-                </li>
-                <li>
-                    <a href="">Need help</a>
-                </li>
-                <li>Contact</li>
-                <li>News</li>
-                <li>Projects</li>
-            </ul>
-
-        </div>
-
-
-    </div>
-
--->
     <div class="navbar">
 
-
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-
-            <li>
-                <a href="">About me</a>
-            </li>
-
-            <li>
-                <a href="">Photos</a>
-            </li>
-
-            <li>
-                <a href="">What i do</a>
-            </li>
-
-
-
-            <li>
-                <a href="../Html_references/contact.html">Contact</a>
-            </li>
-        </ul>
-
-
-    </div>
-
-
-    <div class="about_body">
-
         <div>
-            <h1>I am Asonglefac Millenium Nzefe.</h1>
+            <ul>
+                <li>
+                    <a href="../Html_references/indexts.html">Home</a>
+                </li>
 
-            <p>
-                Welcome to my portfolio website. <br>Here you will know more about me and a brief knowledge about me.
-            </p>
+                <li>
+                    <a href="../Html_references/about.html">About me</a>
+                </li>
 
+                <li>
+                    <a href="../Html_references/Gallery.html">Photos</a>
+                </li>
 
+                <li>
+                    <a href="../Html_references/doings.html">What i do</a>
+                </li>
 
+                <li>
+                    <a href="../Html_references/contact.html">Contact</a>
+                </li>
+            </ul>
         </div>
 
+
     </div>
 
+    <div class="contacts" style="padding: 100px; margin: 30px;">
+        <p>You can get to me via any of via phone number either on WhatsApp or via any of my social media platforms</p>
+
+        <p> Click on any of the icons and you</p>
+        <a href="http://www.facebook.com/Asong_Millenium" target="_blank" style="background-color:black;">
+            <img src="../images/DHS ICONSArtboard 41.png" alt="">
+        </a>
 
 
+
+    </div>
 
     <div class="footer">
 
@@ -98,7 +67,7 @@
 
 
                 <li>
-                    <a href="">Contact</a>
+                    <a href="../Html_references/contact.html">Contact</a>
                 </li>
             </ul>
 
@@ -136,22 +105,21 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul style="padding-bottom: 70px;">
                 <li>
                     <h1>Get to me</h1>
                 </li>
 
                 <li>
-                    <img src="" alt="call"> <br>+237652022629
+                    <img src="../images/DHS ICONSArtboard 42.png" alt="call" style="width: 20px; height: 20px;"> +237652022629
                 </li>
 
                 <li>
-                    <img src="" alt=""> Email: asonglefacmillenium@gmail.com
+                    <img src="" alt=" "> Email: asonglefacmillenium@gmail.com
                 </li>
             </ul>
         </div>
     </div>
-
 </body>
 
 </html>
