--- a/Html_references/indexts.html
+++ b/Html_references/indexts.html
@@ -59,6 +59,9 @@
                 <li>
                     <a href="../Html_references/doings.html">What i do</a>
                 </li>
+                <li>
+                    <a href="../Html_references/contact.html">Contact</a>
+                </li>
             </ul>
         </div>
 
@@ -76,11 +79,12 @@
             <p>Student at the faculty of Engineering and Technology University of Buea Cameroon</p>
             <p>I am a web developer and capable of doing just about anything in web development</p>
             <p>click the link below to know more about me.</p>
-            <a href="../Html_references/about.html">About me</a>
+            <a href="#foots">About me</a>
         </div>
 
 
 
+        <!--
         <div class="what">
             <h1>What i do</h1>
             <div id="doings">
@@ -121,7 +125,7 @@
             <p>click on the image to see my gallery and photos</p>
         </div>
 
-
+    -->
 
 
         <div class="footer">
@@ -142,7 +146,7 @@
 
 
                     <li>
-                        <a href="">Contact</a>
+                        <a href="../Html_references/contact.html">Contact</a>
                     </li>
                 </ul>
 
@@ -180,17 +184,17 @@
                     </li>
                 </ul>
 
-                <ul>
+                <ul style="padding-bottom: 70px;">
                     <li>
                         <h1>Get to me</h1>
                     </li>
 
                     <li>
-                        <img src="" alt="call"> <br>+237652022629
+                        <img src="../images/DHS ICONSArtboard 42.png" alt="call" style="width: 20px; height: 20px;"> +237652022629
                     </li>
 
                     <li>
-                        <img src="" alt=""> Email: asonglefacmillenium@gmail.com
+                        <img src="" alt=" "> Email: asonglefacmillenium@gmail.com
                     </li>
                 </ul>
             </div>
