addition of form to contact page

--- a/Html_references/contact.html
+++ b/Html_references/contact.html
@@ -49,6 +49,31 @@
 
     </div>
 
+
+
+
+    <h3>Fill out the form below to get in touch with me</h3>
+
+    <div id="forms">
+        <form action="/action_page.php">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+            <label for="Email">Email</label>
+
+            <input type="text" id="email" name="email" placeholder="Email..">
+
+            <label for="Password">Password</label>
+
+            <input type="text" id="password" name="password" placeholder="Password..">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
+
     <div class="footer">
 
 
